--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,17 @@
 @import '~bootstrap/scss/bootstrap';
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+
+#bottomHeader {
+    margin-top: -4px;
+    height: 80px;
+    .logo {
+        height: 75%;
+        margin: auto;
+    }
+}
+
+
