--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -14,4 +14,21 @@ img {
     }
 }
 
+.searchSection {
+    background-image: url('https://tourismmedia.italia.it/is/image/mitur/20210401173629-firenze-toscana-gettyimages-1145040590-1?wid=1600&hei=900&fit=constrain,1&fmt=webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.nextTrainsSection {
+    background-image: url('https://hips.hearstapps.com/hmg-prod/images/best-cities-to-visit-in-europe-lead-1639590299.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin-top: -0.5rem;
+    margin-bottom: -0.5rem
+}
+
+
 
